only commit sorry

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>My Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
@@ -14,6 +15,75 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+
+  <header>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Portfolio</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
+  <div class="intro-box">
+    <img src="bunny.png" alt="tech bunny">
+    <h1>Connor McNamee's Resume</h1>
+    <p>Sometimes I work on websites!</p>
+    <button>Howdy!</button>
+  </div>
+
+  <div class="work">
+    <div class="info-box">
+      <h1>Listen Up, Gamers...</h1>
+      <p>I'm 20 years young, I'm gay, and I can barely code a website. If you're looking for someone that can do an inconsistantly ok job at building a webpage, I'm your man for the job.</p>
+    </div>
+
+    <div class="info-box2">
+      <h1>Things I'm Good At:</h1>
+      <ul>
+        <li>Pwning Noobs</li>
+        <li>Eating Fast Food</li>
+        <li>Speaking French</li>
+        <li>Dressing in Only Black</li>
+        <li>Crying</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="info-box3">
+    <h1>Work History</h1>
+    <table>
+      <tr class="head">
+        <th>Yrs</th>
+        <th>Company</th>
+        <th>Title</th>
+        <th>Tech Used</th>
+      </tr>
+      <tr class="data">
+        <td>2</td>
+        <td>McDonald's</td>
+        <td>Fry Cook</td>
+        <td>Oven & Fryer</td>
+      </tr>
+      <tr class="data2">
+        <td>1</td>
+        <td>Carl's Jr</td>
+        <td>Fry Cook</td>
+        <td>Oven & Fryer</td>
+      </tr>
+      <tr class="data">
+        <td>1</td>
+        <td>Link's Fitness</td>
+        <td>Janitor</td>
+        <td>Mop</td>
+      </tr>
+    </table>
+  </div>
+
+  <div class="copyright">
+    <h6>Copyright Awesomeness 2019</h6>
+  </div>
+
 </body>
+
 </html>
